@@ -1,3 +1,7 @@
+- translate the pkg summary when mdv-rpm-summary info is available
+  (for the "Details" mode when installing packages)
+- ensure mdv-rpm-summary is installed first (if selected)
+
 Version 10.4.207 - 21 September 2007, by Thierry Vignaud
 
 - localization:
